Have added features

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="scan_prompt">Align the QR code within the frame to scan</string>
     <string name="scan_cancelled">Scanning cancelled</string>
     <string name="result_placeholder">Scanned data will appear here</string>
+    <string name="change_language">Change Language</string>
+    <string name="language_changed">Language changed</string>
 </resources>
